# directory-contents

./: CHANGELOG.md  LICENSE  README.md  default.nix  directory-contents.cabal  env.nix  release.nix  shell.nix
.ci/reflex-platform/: github.json
.github/workflows/: haskell.yml
nixpkgs/: github.json
reflex-platform/: github.json
src/System/Directory/: Contents.hs
src/System/Directory/Contents/: Types.hs  Zipper.hs
test/: Test.hs
test/fixtures/test-1/: D  README.md  a  d_rocket  rocket
test/fixtures/test-1/A/: B
test/fixtures/test-1/B/: A
