cabal-version:       >=1.10
name:                directory-contents
version:             0.1.0.0
synopsis: Recursively build a tree of directory contents.
description: Like the linux tree command, this library recursively constructs a tree of directory contents while detecting and avoiding symlink cycles.
bug-reports: https://github.com/obsidiansystems/directory-contents/issues
license:             BSD3
license-file:        LICENSE
author:              Obsidian Systems
maintainer:          maintainer@obsidian.systems
copyright:           2020 Obsidian Systems LLC
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md
                     README.md

library
  exposed-modules:     System.Directory.Contents
  build-depends:       base >=4.12 && <4.13, containers >=0.6 && <0.7, text >=1.2 && <1.3, directory >=1.3 && <1.4, filepath >=1.4 && <1.5, witherable >= 0.3 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

source-repository head
  type:     git
  location: git://github.com/obsidiansystems/directory-contents.git
